fix hero height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   background-size: cover;
   background-position: center;
   max-width: 768px;
-  height: 500px;
+  height: 600px;
 }
 
 #hero .flex-container {
